CSS & Markup Optimizations

--- a/frank/ie.css
+++ b/frank/ie.css
@@ -22,7 +22,7 @@ label {
   padding-bottom: 45px;
 }
 
-#sub_header .widget-4, #sub_header .widget-7 {
+#sub-header .widget-4, #sub-header .widget-7 {
   clear: left;
   margin-left: 0;
 }
