--- a/frank/stylesheets/scss/ie.scss
+++ b/frank/stylesheets/scss/ie.scss
@@ -20,7 +20,7 @@ label {
 #content.single {
 	padding-bottom: $row-height * 3; }
 
-#sub_header {
+#sub-header {
 	.widget-4, .widget-7 {
 		clear:left;
 		margin-left:0;
