--- a/frank/stylesheets/scss/modules/_buttons.scss
+++ b/frank/stylesheets/scss/modules/_buttons.scss
@@ -1,40 +1,29 @@
 /*Buttons*/		
-button, 
-.button, 
-input[type=submit] {
+.button {
 	display: inline-block;
 	background: $color-light;
 	color: $color-midtone;
 	padding: 8px 10px;
-	border-radius: 3px;
+	border-radius: 2px;
 	font: #{$font-weight-bold} #{$font-size-small} #{$typeface-secondary};
 	text-align: center;
-	text-shadow:0px 1px 0px rgba(255,254,254,.3);
 	border: 1px solid rgba(18, 7, 6, 0.2);
-	box-shadow: inset 0px -1px 1px rgba(18, 7, 6, 0.1), inset 0px 1px 1px rgba(255, 253, 253, 0.4); 
 	&:hover {
 		background: $color-midtone-light;
 		color: $color-highlight;
 		border: 1px solid rgba(18, 7, 6, 0.5);
-		text-shadow:0px -1px 0px rgba(5,0,0,.3);
-		box-shadow: inset 0px -1px 1px rgba(18, 7, 6, 0.1), inset 0px 1px 1px rgba(255, 253, 253, 0.2); 
 	}
 }
 
-button.alt, 
-.button.alt, 
-input[type=submit].alt {
+.button.alt {
 	background: $color-accent;
 	color: $color-highlight; 
-	text-shadow:0px -1px 0px rgba(5,0,0,.3);
 	&:hover {
 		background: $color-accent-alt;
 		color: $color-highlight;
-		border: 1px solid rgba(18, 7, 6, 0.5); 
 	}
 }
 
-button.small, 
 .button.small {
 	font-size: $font-size-xx-small;
 	padding: 4px 8px;
@@ -46,7 +35,6 @@ button.small,
 	button, .button, input[type=submit] {
 		display:block;
 		width:100% !important;
-		box-sizing:border-box;
 		margin:$row-height 0;
 	}
 }
