--- a/frank/stylesheets/scss/modules/_widgets.scss
+++ b/frank/stylesheets/scss/modules/_widgets.scss
@@ -1,17 +1,15 @@
 .widget {
 	font-size: $font-size-x-small;
-	.widget-title { 
-		font-size: $font-size-small; 
-		white-space: nowrap;
-	  overflow: hidden;
-	  text-overflow: ellipsis;
-	  -o-text-overflow: ellipsis;
-	}	
 	margin-bottom:$row-height;
 	p {
 		font-size: $font-size-x-small;
 	}
 }
+
+.widget-title { 
+	font-size: $font-size-small; 
+	@extend .truncate;
+}	
 
 .widget.six.columns, .widget.three.columns, .widget.four.columns {
 	float:left !important;
