--- a/frank/stylesheets/scss/style.scss
+++ b/frank/stylesheets/scss/style.scss
@@ -11,6 +11,7 @@ Tags: 					brown, red, white, two-columns, fixed-width, sticky-post, custom-menu
 */
 @import "partials/variables";
 @import "partials/mixins";
+@import "partials/extensions";
 @import "partials/reset";
 @import "partials/grid";
 @import "partials/global";
