--- a/somerandomdude/ie7.css
+++ b/somerandomdude/ie7.css
@@ -1,1 +1,1 @@
-#content,#sub_header,#content *,#sub_header *{z-index:-1 !important}#projects_navigation{display:none}
+#content,#sub-header,#content *,#sub-header *{z-index:-1 !important}#projects-nav{display:none}
