--- a/somerandomdude/stylesheets/scss/partials/_index.scss
+++ b/somerandomdude/stylesheets/scss/partials/_index.scss
@@ -1,4 +1,6 @@
+/*TODO: This doesn't need to be this specific*/
 .post-group.oneup.large {
+	margin-bottom:$row-height*4;
 	.title:before {
 		content: 'Featured Article: ';
 		font-style: italic;
