--- a/somerandomdude/stylesheets/scss/style.scss
+++ b/somerandomdude/stylesheets/scss/style.scss
@@ -9,6 +9,7 @@ Version:        0.9.2
 */
 @import "../../../frank/stylesheets/scss/partials/variables";
 @import "../../../frank/stylesheets/scss/partials/mixins";
+@import "../../../frank/stylesheets/scss/partials/extensions";
 
 @import "partials/variables";
 
