--- a/frank/editor-style.css
+++ b/frank/editor-style.css
@@ -2,9 +2,17 @@
 Theme Name: Frank
 Description: Styles for the TinyMCE editor.
 */
+img {
+  box-shadow: 0px 0px 8px rgba(18, 7, 6, 0.3);
+}
+
 /* ==========================================================================
    HTML5 display definitions
    ========================================================================== */
+* {
+  box-sizing: border-box;
+}
+
 /*
  * Corrects `block` display not defined in IE 8/9.
  */
@@ -286,13 +294,10 @@ input[disabled] {
 }
 
 /*
- * 1. Addresses box sizing set to `content-box` in IE 8/9.
  * 2. Removes excess padding in IE 8/9.
  */
 input[type="checkbox"],
 input[type="radio"] {
-  box-sizing: border-box;
-  /* 1 */
   padding: 0;
   /* 2 */
 }
@@ -781,17 +786,6 @@ body {
   text-rendering: optimizelegibility;
 }
 
-.reset {
-  margin: 0;
-  padding: 0;
-}
-
-.ir {
-  font: 0/0 a;
-  text-shadow: none;
-  color: transparent;
-}
-
 /*Images*/
 img.noshadow {
   box-shadow: none !important;
@@ -802,7 +796,6 @@ a {
   color: #ea0000;
   text-decoration: none;
 }
-
 a:hover {
   color: #ff1e00;
 }
@@ -939,8 +932,6 @@ dd {
 /*Search - not implemented*/
 #searchform input {
   width: 100%;
-  box-sizing: border-box;
-  -moz-box-sizing: border-box;
 }
 
 #search {
@@ -976,7 +967,6 @@ code, small {
 
 img {
   max-width: 100%;
-  box-shadow: 0px 0px 8px rgba(18, 7, 6, 0.3);
 }
 
 h1, h2 {
