--- a/frank/stylesheets/scss/modules/_metadata.scss
+++ b/frank/stylesheets/scss/modules/_metadata.scss
@@ -1,48 +1,45 @@
 /*Metadata content*/
 .metadata {
-	a { color: $color-midtone; }
-	a:hover { color: $color-off-black;  }
-	font: #{$font-size-x-small} #{$typeface-secondary};
+	a { 
+		color: $color-midtone; 
+		&:hover { 
+			color: $color-off-black;  
+		}
+	}
+	font: $font-size-x-small $typeface-secondary;
 }
 
-ul.metadata {
-	@extend .reset;
+.metadata {
+	@extend %reset;
 	list-style: none;
 	li {
-		@extend .reset;
+		@extend %reset;
 	}
-	li.date {
+	.date {
 		font-weight: $font-weight-bold;
 	} 
 }
 
-ul.metadata.horizontal {
+.metadata.horizontal {
 	margin-top: $row-height;
 	display: inline-block;
 	li {
 		float: left;
-		background: none;
 		&:not(:last-of-type) {
     	margin-right: 15px;
   	}
 	}
 }
 
-ul.metadata.vertical {
+.metadata.vertical {
 	margin-top: 5px;
 	li {
 		text-align: right;
 		margin-bottom: 7px; 
 	}
-	li.date {
+	.date {
 		margin-bottom: 15px; 
 	} 
-}
-
-dl.metadata {
-	@extend .reset;
-	text-align: right;
-	margin-bottom: $row-height; 
 }
 
 @media only screen and  (max-width: 767px) {
@@ -53,10 +50,9 @@ dl.metadata {
 		display: inline-block;
 		li {
 			float: left;
-			background: none;
 			margin-right: 15px; 
 			text-align:left;
-			&.last, &:last-child {
+			&:last-child {
 				margin-right: 0; 
 			} 
 			&:first-child {
