--- a/frank/stylesheets/scss/modules/_typography.scss
+++ b/frank/stylesheets/scss/modules/_typography.scss
@@ -1,22 +1,3 @@
-/*Headers*/
-h1, h2, h3, h4, h5, h6 {
-	@extend .title;
-	padding-top: 0px; 
-	margin-bottom: $row-height; 
-}
-h1:first-child, h2:first-child, h3:first-child, h4:first-child, h5:first-child, h6:first-child { margin-top: 0; }
-h1 { font-size: $font-size-x-large; }
-h2 { font-size: $font-size-large; }
-h3 { font-size: $font-size-medium; }
-h4 { font-size: $font-size-small; }
-h5 { font-size: $font-size-x-small; }
-h6 { font-size: $font-size-xx-small; }
-
-/*Paragraph*/
-p {
-	margin: $row-height 0;
-	font-size: $font-size-small; 
-}
 .font-size-xx-large { font-size: $font-size-xx-large; }
 .font-size-x-large { font-size: $font-size-x-large; }
 .font-size-large { font-size: $font-size-large; }
@@ -25,10 +6,41 @@ p {
 .font-size-x-small { font-size: $font-size-x-small; }
 .font-size-xx-small { font-size: $font-size-xx-small; }
 
-p:first-child { margin-top: 0; }
-p:last-child { margin-bottom: 0; }
+/*Headers*/
+h1, h2, h3, h4, h5, h6 {
+	@extend .title;
+	padding-top: 0px; 
+	margin-bottom: $row-height; 
+	&:first-child {
+		margin-top: 0;
+	}
+}
+h1 { @extend .font-size-x-large; }
+h2 { @extend .font-size-large; }
+h3 { @extend .font-size-medium; }
+h4 { @extend .font-size-small; }
+h5 { @extend .font-size-x-small; }
+h6 { @extend .font-size-xx-small; }
+
+/*Paragraph*/
+p {
+	margin: $row-height 0;
+	@extend .font-size-small; 
+	&:first-child { margin-top: 0; }
+	&:last-child { margin-bottom: 0; }
+}
 
 /*Blockquote*/
+blockquote {
+	color: $color-dark;
+	@extend %vertical-border-break-dark;
+	margin: ($row-height * 2) 0 ($row-height * 2) $gutter-width;
+	p {
+		font-size: inherit;
+		line-height: inherit;
+	}
+}
+
 blockquote > p:first-child::before {
 	content: open-quote;
 }
@@ -38,23 +50,9 @@ blockquote > p:last-child::after {
 blockquote, q { 
 	quotes: "“" "”" ; 
 }
-blockquote {
-	color: $color-dark;
-	border: 2px $color-off-black solid;
-	border-left: 0;
-	border-right: 0;
-	margin: ($row-height * 2) 0 ($row-height * 2) $gutter-width;
-	padding: $row-height 0;
-	
-	p {
-		font-size: inherit;
-		line-height: inherit;
-		
-	}
-}
+
 cite, blockquote[cite]:after, cite {
-	font-family: $typeface-secondary;
-	font-size:$font-size-small;
+	font: $font-size-small $typeface-secondary;
 }
 blockquote[cite]:after {
 	content: "—" attr(cite);
@@ -66,8 +64,8 @@ cite {
 	margin-left: $gutter-width;
 	margin-top: -1em;
 	margin-bottom: 2em; 
+	&:before { content: "—"; }
 }
-cite:before { content: "—"; }
 
 /*Pre & Code*/
 pre, code {
@@ -78,16 +76,12 @@ pre, code {
 	font-family: "andale mono", "lucida console", monospace; 
 }
 pre { /*Merge with Blockquote?*/
-	border: 2px $color-off-black solid;
-	border-left: 0;
-	border-right: 0;
+	@extend %vertical-border-break-dark;
 	margin: ($row-height * 2) 0 ($row-height * 2) $gutter-width;
-	padding: $row-height 0;
+	
 }
 
-small { font-size: $font-size-small; }
-strong { font-weight: $font-weight-bold; }
-em { font-style: italic; }
+small { @extend .font-size-small; }
 
 /*MOBILE*/
 @media only screen and  (max-width: 767px) {
