--- a/frank/stylesheets/scss/partials/_comments.scss
+++ b/frank/stylesheets/scss/partials/_comments.scss
@@ -1,5 +1,3 @@
-@import "compass/css3";
-
 #comments-container {
 	margin-top: $row-height * 4;
 	.pagination {		margin-bottom:$row-height*2;
@@ -23,7 +21,6 @@
 }
 
 .comment-content {
-	@include box-sizing(border-box);
 	@extend .clearfix; 
 	@extend .column;
 	width: $nine-columns;
@@ -55,7 +52,7 @@
 	padding-left: 0;
 	margin-left: 0;
 	.comment {
-		@extend .reset;
+		@extend %reset;
 	}
 	.date-time {
 		display:block;
@@ -89,11 +86,6 @@
 	margin-top:$row-height*4;
 	label { display: none; }
 	input[type=text], textarea {
-		/*TODO: Streamline*/
-		-moz-box-sizing: border-box;
-		-ms-box-sizing: border-box;
-		-webkit-box-sizing: border-box;
-		box-sizing: border-box;
 		width:100%;
 	} 
 	input[type=text] {
@@ -105,7 +97,11 @@
 		height: 118px;
 		&:focus { height: $row-height * 25; } 
 	}	
-	#submit { margin-top: $row-height; margin-left: 26.1%; } 
+	#submit { 
+		margin-top: $row-height; 
+		/*TODO: Extend .push-three?*/
+		margin-left: 26.1%; 
+	} 
 	.loggedin { font-style: italic; } 
 }
 
@@ -120,10 +116,10 @@
 	#respond {
 		margin-bottom:$row-height*2;
 		#submit {
-		margin-left:0;
-		display:block;
-		width:100%;
-	}
+			margin-left:0;
+			display:block;
+			width:100%;
+		}
 	}
 	#comments {
 		.metadata	{
