--- a/frank/stylesheets/scss/partials/_fourohfour.scss
+++ b/frank/stylesheets/scss/partials/_fourohfour.scss
@@ -1,8 +1,8 @@
-#content.fourohfour {
+.error404 {
 	h2 {
-		margin-top: 0; }
-}
-
-#content.fourohfour .main {
-	margin-bottom:$row-height*2;
+		margin-top: 0; 
+	}
+	.main {
+		margin-bottom:$row-height*2;
+	}
 }
