--- a/frank/stylesheets/scss/partials/_global.scss
+++ b/frank/stylesheets/scss/partials/_global.scss
@@ -6,17 +6,6 @@ body {
 	text-rendering: optimizelegibility; 
 }
 
-.reset {
-	margin:0;
-	padding:0;
-}
-
-.ir {
-  font: 0/0 a;
-  text-shadow: none;
-  color: transparent;
-}
-
 /*Images*/
 img.noshadow { box-shadow: none !important; }
 
@@ -24,17 +13,17 @@ img.noshadow { box-shadow: none !important; }
 a {
 	color: $color-accent;
 	text-decoration: none;
+	&:hover { color: $color-accent-alt; }
 }
-a:hover { color: $color-accent-alt; }
 
 /* Titles */
 .title, .widget-title {
 	font: #{$font-weight-normal} #{$font-size-medium}/1.3 #{$typeface-secondary};
 	a {
 		color: $color-midtone;
-	}
-	a:hover {
-		color: $color-dark;
+		&:hover {
+			color: $color-dark;
+		}
 	}
 }
 
@@ -117,7 +106,7 @@ dd {
 		a {
 			margin:0;
 			border: 1px $color-light solid;
-			color:$color-midtone;
+			color: $color-midtone;
 			padding: 4px 6px;
 			border-radius:2px;
 		}
@@ -134,13 +123,13 @@ dd {
 	width: $nine-columns;
 }
 
-#content.page .post img { box-shadow: none !important; }
+#content.page .post img { 
+	box-shadow: none !important; 
+}
 		
 /*Search - not implemented*/
 #searchform input {
 	width:100%;
-	box-sizing:border-box; 
-	-moz-box-sizing:border-box;
 }
 	
 #search {
