--- a/frank/stylesheets/scss/partials/_widgets.scss
+++ b/frank/stylesheets/scss/partials/_widgets.scss
@@ -1,19 +1,24 @@
-@mixin background_color_off_black_alpha($alpha: 1) {
-background-color: rgba(5, 0, 0, $alpha);
+.widget {
+	font-size: $font-size-x-small;
+	.widget-title { 
+		font-size: $font-size-small; 
+		@extend .truncate;
+	}	
+	margin-bottom:$row-height;
+	p {
+		font-size: $font-size-x-small;
+	}
 }
 
-@mixin default-shadow() {
-box-shadow: 0px 0px 8px rgba(18, 7, 6, 0.3);
+.widget.six.columns, .widget.three.columns, .widget.four.columns {
+	float:left !important;
 }
 
-@mixin column() {
-	margin-left: 4.4%; float: left; min-height: 1px; position: relative;
+.widget.six.columns:nth-child(2n+1), .widget.three.columns:nth-child(4n+1), .widget.four.columns:nth-child(3n+1) {
+	margin-left:0;
+	clear: left; 
 }
-
-@mixin column-based-width($columns: 1, $modifier: 0) {
-width: $columns * $column-width + ($columns - 1) * $gutter-width + $modifier;
-}
-
-@mixin inset-shadow($x: 0px, $y: 0px, $blur: 3px, $color: black) {
-box-shadow: inset $x $y $blur $color;
+.widget.six.columns:nth-child(2n), .widget.three.columns:nth-child(4n), .widget.four.columns:nth-child(3n)  {
+	margin-right: 0; 
+	float:right;
 }
