--- a/somerandomdude/stylesheets/scss/ie7.scss
+++ b/somerandomdude/stylesheets/scss/ie7.scss
@@ -2,10 +2,10 @@
 @import "../../../frank/stylesheets/scss/partials/_mixins";
 @import "partials/_variables";
 
-#content, #sub_header, #content *, #sub_header * {
+#content, #sub-header, #content *, #sub-header * {
 	z-index: -1 !important; 
 }
 
-#projects_navigation {
+#projects-nav {
 	display: none; 
 }
