--- a/somerandomdude/stylesheets/scss/partials/_footer.scss
+++ b/somerandomdude/stylesheets/scss/partials/_footer.scss
@@ -1,5 +1,3 @@
-
-
 #page-bottom {
 	border-top: 1px solid $color-dark;
 	box-shadow:0 -1px 1px rgba(5,0,0,.3);
@@ -18,8 +16,12 @@
 		font: italic #{$font-size-large} #{$typeface-primary};
 		text-shadow:0px -1px 0px rgba(5,0,0,.3); 
 	}
-	a { margin-left:10px; }
-	a:hover { color:$color-highlight; }
+	a { 
+		margin-left:10px; 
+		&:hover { 
+			color:$color-highlight; 
+		}
+	}
 	small { 
 		display:block; 
 		margin-top:$row-height*2; 
@@ -77,7 +79,6 @@
 	} 
 }
 
-
 @media only screen and  (max-width: 767px) {
 	#twitter-follow {
 		margin-top:$row-height;
@@ -87,5 +88,4 @@
 	#text-10 #footer_main_promo .content {
 		padding-top: $row-height;
 	}
-	
 }
