--- a/somerandomdude/stylesheets/scss/partials/_sidebar.scss
+++ b/somerandomdude/stylesheets/scss/partials/_sidebar.scss
@@ -1,13 +1,11 @@
 #bio_pic { 
 	background:inline-image('profile.jpg') no-repeat center center;
-	
 	max-width:100%;
 	height:160px;
-	
-	@extend .ir;
+	@extend %image-replace;
 	display:block;
 	margin-bottom:$row-height;
-	@include default-shadow();
+	@extend %default-shadow;
 
 }
 
@@ -20,7 +18,7 @@
 
 @media only screen and  (max-width: 767px) {
 	#bio_pic {
-		font: #{$typeface-secondary} #{$font-size-medium};
+		font: #{$font-size-medium} #{$typeface-secondary} ;
 		color:$color-midtone; 
 		background:none;
 		width:auto;
