compiled styles using new main element

--- a/frank/style.css
+++ b/frank/style.css
@@ -25,7 +25,8 @@ header,
 hgroup,
 nav,
 section,
-summary {
+summary,
+main {
   display: block;
 }
 
@@ -224,7 +225,7 @@ figure {
  * Define consistent border, margin, and padding.
  */
 fieldset {
-  border: 1px solid #c0c0c0;
+  border: 1px solid silver;
   margin: 0 2px;
   padding: 0.35em 0.625em 0.75em;
 }
